src/test/ui/issue-46186.stderr
error: expected item, found `;`
  --> $DIR/issue-46186.rs:13:2
   |
13 | }; //~ ERROR expected item, found `;`
   |  ^ help: consider removing this semicolon

error: aborting due to previous error

